feat: implement real-time chat system including group chats, file sharing, and read receipts.