@@ -4,12 +4,14 @@ import com.example.qlns.DTO.Response.ChatEventDTO;
 import com.example.qlns.DTO.Response.ChatRoomDTO;
 import com.example.qlns.DTO.Response.ContactDTO;
 import com.example.qlns.DTO.Response.MessageDTO;
-import com.example.qlns.DTO.Response.ReactionDTO;
-import com.example.qlns.DTO.Response.ReadReceiptDTO;
+
+import com.example.qlns.DTO.Response.RoomMemberDTO;
 import com.example.qlns.Entity.*;
 import com.example.qlns.Enum.ChatEventType;
 import com.example.qlns.Enum.ChatRoomType;
+import com.example.qlns.Enum.EmployeeStatus;
 import com.example.qlns.Enum.MessageType;
+import com.example.qlns.Enum.Role;
 import com.example.qlns.Exception.ForbiddenException;
 import com.example.qlns.Exception.ResourceNotFoundException;
 import com.example.qlns.Repository.*;
@@ -19,12 +21,11 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
+
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
-// [Chat] Service chính xử lý toàn bộ logic nhắn tin
-// Tuân thủ SOLID: Single Responsibility cho messaging, Open/Closed cho mở rộng message types
 @Service
 public class ChatService {
 
@@ -32,19 +33,16 @@ public class ChatService {
     private final ChatRoomMemberRepository memberRepo;
     private final MessageRepository messageRepo;
     private final UserRepository userRepo;
-    private final MessageReadReceiptRepository readReceiptRepo;
-    private final MessageReactionRepository reactionRepo;
+
+
     private final EmployeeRepository employeeRepo;
     private final DepartmentRepository departmentRepo;
     private final SimpMessagingTemplate messagingTemplate;
 
-    // [Chat] Constructor injection - tuân thủ Dependency Inversion
     public ChatService(ChatRoomRepository roomRepo,
             ChatRoomMemberRepository memberRepo,
             MessageRepository messageRepo,
             UserRepository userRepo,
-            MessageReadReceiptRepository readReceiptRepo,
-            MessageReactionRepository reactionRepo,
             EmployeeRepository employeeRepo,
             DepartmentRepository departmentRepo,
             SimpMessagingTemplate messagingTemplate) {
@@ -52,15 +50,12 @@ public class ChatService {
         this.memberRepo = memberRepo;
         this.messageRepo = messageRepo;
         this.userRepo = userRepo;
-        this.readReceiptRepo = readReceiptRepo;
-        this.reactionRepo = reactionRepo;
         this.employeeRepo = employeeRepo;
         this.departmentRepo = departmentRepo;
         this.messagingTemplate = messagingTemplate;
     }
 
-    // [Chat] Tự động tạo phòng chat cho các phòng ban chưa có nhóm khi app khởi
-    // động
+    // Khi app khởi động, tạo phòng chat cho các phòng ban chưa có
     @EventListener(ApplicationReadyEvent.class)
     @Transactional
     public void syncDepartmentRoomsOnStartup() {
@@ -72,41 +67,79 @@ public class ChatService {
     }
 
     // ══════════════════════════════════════════════════════════════
-    // [Chat] PHÒNG CHAT - Quản lý room
+    // PHÒNG CHAT
     // ══════════════════════════════════════════════════════════════
 
-    // [Chat] Lấy danh sách phòng chat kèm metadata (unreadCount, lastMessage) cho
-    // Frontend
-    //
+    // Lấy danh sách phòng chat kèm số tin chưa đọc và tin nhắn mới nhất
     public List<ChatRoomDTO> getRoomsWithMetadata(Long userId) {
         List<ChatRoomMember> memberships = memberRepo.findByUserId(userId);
 
-        return memberships.stream().map(membership -> {
+        List<ChatRoomDTO> rooms = memberships.stream().map(membership -> {
             ChatRoom room = membership.getRoom();
             ChatRoomDTO dto = ChatRoomDTO.from(room);
 
-            // [Chat] Tính số tin chưa đọc dựa trên lastReadMessageId
+            if (room.getCreatedBy() != null) {
+                dto.setCreatedByName(getDisplayName(room.getCreatedBy()));
+            }
+
+            // Đếm số tin chưa đọc dựa vào lastReadMessageId
             Long lastReadId = membership.getLastReadMessageId();
             if (lastReadId != null) {
                 dto.setUnreadCount(messageRepo.countByRoomIdAndIdGreaterThan(room.getId(), lastReadId));
             } else {
-                // Chưa đọc bao giờ → đếm tất cả tin nhắn
                 dto.setUnreadCount(messageRepo.countByRoomIdAndIdGreaterThan(room.getId(), 0L));
             }
 
-            // [Chat] Lấy tin nhắn mới nhất để hiển thị preview
+            // Lấy tin nhắn mới nhất để hiển thị preview
             List<Message> messages = messageRepo.findByRoomIdOrderByCreatedAtAsc(room.getId());
             if (!messages.isEmpty()) {
                 Message last = messages.get(messages.size() - 1);
-                dto.setLastMessage(last.getIsRecalled() ? "Tin nhắn đã bị thu hồi" : last.getMessage());
-                dto.setLastMessageTime(last.getCreatedAt() != null ? last.getCreatedAt().toString() : null);
+                dto.setLastMessage(Boolean.TRUE.equals(last.getIsRecalled()) ? "Tin nhắn đã bị thu hồi"
+                        : (last.getSender() != null
+                                ? getDisplayName(last.getSender()) + ": " + last.getMessage()
+                                : last.getMessage()));
+                dto.setLastMessageTime(last.getCreatedAt() != null
+                        ? last.getCreatedAt().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"))
+                        : null);
+            }
+
+            // Với phòng 1-1: lấy tên và id của người còn lại
+            if (room.getType() == ChatRoomType.PRIVATE) {
+                memberRepo.findByRoomId(room.getId()).stream()
+                        .filter(m -> !m.getUser().getId().equals(userId))
+                        .findFirst()
+                        .ifPresent(other -> {
+                            dto.setOtherParticipantId(other.getUser().getId());
+                            Long empId = other.getUser().getEmployeeId();
+                            String fullName = empId != null
+                                    ? employeeRepo.findById(empId)
+                                            .map(emp -> emp.getFullName())
+                                            .orElse(other.getUser().getUsername())
+                                    : other.getUser().getUsername();
+                            dto.setOtherParticipantName(fullName);
+                        });
             }
 
             return dto;
-        }).toList();
+        }).collect(Collectors.toList());
+
+        // Sắp xếp theo tin nhắn mới nhất lên trên
+        rooms.sort((a, b) -> {
+            String timeA = a.getLastMessageTime();
+            String timeB = b.getLastMessageTime();
+            if (timeA == null && timeB == null)
+                return 0;
+            if (timeA == null)
+                return 1;
+            if (timeB == null)
+                return -1;
+            return timeB.compareTo(timeA); // DESC
+        });
+
+        return rooms;
     }
 
-    // [Chat] Tạo hoặc lấy phòng chat riêng 1-1 giữa 2 user
+    // Tạo phòng chat 1-1 nếu chưa có, hoặc trả về phòng đã tồn tại
     @Transactional
     public ChatRoom getOrCreatePrivateRoom(Long userId1, Long userId2) {
         return roomRepo.findPrivateRoom(userId1, userId2).orElseGet(() -> {
@@ -122,13 +155,10 @@ public class ChatService {
         });
     }
 
-    // [Chat] Khởi tạo phòng chat mặc định cho phòng ban
-    // - Manager của phòng ban → ADMIN
-    // - Toàn bộ nhân viên còn lại → MEMBER
-    // - Nếu phòng đã tồn tại → cập nhật thành viên
+    // Khởi tạo hoặc đồng bộ phòng chat của một phòng ban:
+    // manager → ADMIN, các nhân viên còn lại → MEMBER
     @Transactional
     public ChatRoom initDepartmentRoom(Department department) {
-        // [Chat] Tìm hoặc tạo mới phòng DEPARTMENT theo departmentId
         ChatRoom room = roomRepo.findByDepartmentId(department.getId()).orElseGet(() -> {
             ChatRoom newRoom = new ChatRoom();
             newRoom.setName(department.getName());
@@ -137,33 +167,38 @@ public class ChatService {
             return roomRepo.save(newRoom);
         });
 
-        // [Chat] Xác định manager của phòng
         Employee manager = department.getManager();
 
-        // [Chat] Thêm manager làm ADMIN (nếu có User tài khoản)
+        // Reset ADMIN cũ về MEMBER trước khi gán manager mới
+        memberRepo.findByRoomId(room.getId()).stream()
+                .filter(m -> "ADMIN".equals(m.getRole()))
+                .forEach(m -> {
+                    m.setRole("MEMBER");
+                    memberRepo.save(m);
+                });
+
         if (manager != null) {
             userRepo.findByEmployeeId(manager.getId()).ifPresent(managerUser -> {
-                // Nếu chưa có createdBy → gán creator là manager
                 if (room.getCreatedBy() == null) {
                     room.setCreatedBy(managerUser);
                     roomRepo.save(room);
                 }
-                addMemberWithRole(room.getId(), managerUser.getId(), "ADMIN");
+                setMemberRole(room.getId(), managerUser.getId(), "ADMIN");
             });
         }
 
-        // [Chat] Thêm tất cả nhân viên ACTIVE trong phòng làm MEMBER
+        // Thêm toàn bộ nhân viên ACTIVE vào phòng (bỏ qua manager và admin hệ thống)
         List<Employee> employees = employeeRepo.findByDepartmentIdAndStatus(
-                department.getId(), com.example.qlns.Enum.EmployeeStatus.ACTIVE);
+                department.getId(), EmployeeStatus.ACTIVE);
         for (Employee emp : employees) {
-            // Bỏ qua manager (đã thêm ADMIN ở trên)
             if (manager != null && emp.getId().equals(manager.getId()))
                 continue;
             userRepo.findByEmployeeId(emp.getId())
+                    .filter(user -> user.getRole() != Role.ADMIN)
                     .ifPresent(user -> addMemberWithRole(room.getId(), user.getId(), "MEMBER"));
         }
 
-        // [Chat] Gửi tin hệ thống nếu phòng mới được tạo
+        // Gửi tin hệ thống lần đầu khi phòng mới được tạo
         if (room.getCreatedBy() != null && messageRepo.findByRoomIdOrderByCreatedAtAsc(room.getId()).isEmpty()) {
             sendSystemMessage(room.getId(), "Phòng chat \"" + department.getName() + "\" đã được tạo");
         }
@@ -182,10 +217,8 @@ public class ChatService {
         room.setCreatedBy(creator);
         ChatRoom saved = roomRepo.save(room);
 
-        // [Chat] Thêm creator với role ADMIN
         addMemberWithRole(saved.getId(), creatorUserId, "ADMIN");
 
-        // [Chat] Thêm các thành viên ban đầu
         if (memberUserIds != null) {
             for (Long uid : memberUserIds) {
                 if (!uid.equals(creatorUserId)) {
@@ -194,13 +227,11 @@ public class ChatService {
             }
         }
 
-        // [Chat] Gửi tin nhắn hệ thống thông báo tạo nhóm
-        String sysMsg = creator.getUsername() + " đã tạo nhóm \"" + name + "\"";
+        String sysMsg = getDisplayName(creator) + " đã tạo nhóm \"" + name + "\"";
         sendSystemMessage(saved.getId(), sysMsg);
         return saved;
     }
 
-    // [Chat] Đổi tên phòng chat nhóm
     @Transactional
     public ChatRoom updateRoomName(Long roomId, String newName, Long updatedByUserId) {
         ChatRoom room = roomRepo.findById(roomId)
@@ -215,13 +246,12 @@ public class ChatService {
         room.setName(newName);
         ChatRoom saved = roomRepo.save(room);
 
-        // [Chat] Tin nhắn hệ thống thông báo đổi tên
-        String sysMsg = updater.getUsername() + " đã đổi tên nhóm từ \"" + oldName + "\" thành \"" + newName + "\"";
+        String sysMsg = getDisplayName(updater) + " đã đổi tên nhóm từ \"" + oldName + "\" thành \"" + newName + "\"";
         sendSystemMessage(roomId, sysMsg);
         return saved;
     }
 
-    // [Chat] Thêm nhiều thành viên vào nhóm (Manager dùng)
+    // Thêm nhiều thành viên vào nhóm, không cho phép thêm admin hệ thống
     @Transactional
     public void addMembers(Long roomId, List<Long> userIds, Long addedByUserId) {
         User addedBy = userRepo.findById(addedByUserId)
@@ -231,18 +261,20 @@ public class ChatService {
         }
 
         for (Long uid : userIds) {
+            User newUser = userRepo.findById(uid).orElse(null);
+            if (newUser == null)
+                continue;
+            if (newUser.getRole() == Role.ADMIN) {
+                throw new ForbiddenException("Không thể thêm tài khoản admin vào phòng chat");
+            }
             if (!memberRepo.existsByRoomIdAndUserId(roomId, uid)) {
                 addMemberWithRole(roomId, uid, "MEMBER");
-                // [Chat] Tin nhắn hệ thống cho mỗi thành viên được thêm
-                userRepo.findById(uid).ifPresent(newUser -> {
-                    String sysMsg = addedBy.getUsername() + " đã thêm " + newUser.getUsername() + " vào nhóm";
-                    sendSystemMessage(roomId, sysMsg);
-                });
+                String sysMsg = getDisplayName(addedBy) + " đã thêm " + getDisplayName(newUser) + " vào nhóm";
+                sendSystemMessage(roomId, sysMsg);
             }
         }
     }
 
-    // [Chat] Xóa thành viên khỏi nhóm
     @Transactional
     public void removeMemberFromRoom(Long roomId, Long userId, Long removedByUserId) {
         User removedBy = userRepo.findById(removedByUserId)
@@ -252,28 +284,49 @@ public class ChatService {
 
         String sysMsg;
         if (userId.equals(removedByUserId)) {
-            sysMsg = target.getUsername() + " đã rời khỏi nhóm";
+            sysMsg = getDisplayName(target) + " đã rời khỏi nhóm";
         } else {
-            sysMsg = removedBy.getUsername() + " đã xóa " + target.getUsername() + " khỏi nhóm";
+            sysMsg = getDisplayName(removedBy) + " đã xóa " + getDisplayName(target) + " khỏi nhóm";
         }
 
         memberRepo.deleteByRoomIdAndUserId(roomId, userId);
         sendSystemMessage(roomId, sysMsg);
     }
 
-    // [Chat] Lấy danh sách thành viên trong phòng chat
+    // Dùng nội bộ service, đã lọc admin hệ thống
     public List<ChatRoomMember> getRoomMembers(Long roomId) {
-        return memberRepo.findByRoomId(roomId);
+        return memberRepo.findByRoomId(roomId).stream()
+                .filter(m -> m.getUser().getRole() != Role.ADMIN)
+                .collect(Collectors.toList());
     }
 
-    // [Chat] Tìm kiếm tin nhắn theo keyword trong phòng chat
+    // Trả về DTO thành viên kèm họ tên, chức vụ, phòng ban (dùng cho REST response)
+    public List<RoomMemberDTO> getRoomMembersDTO(Long roomId) {
+        return memberRepo.findByRoomId(roomId).stream()
+                .filter(m -> m.getUser().getRole() != Role.ADMIN)
+                .map(m -> {
+                    RoomMemberDTO dto = RoomMemberDTO.from(m);
+                    dto.setFullName(getDisplayName(m.getUser()));
+                    Long empId = m.getUser().getEmployeeId();
+                    if (empId != null) {
+                        employeeRepo.findById(empId).ifPresent(emp -> {
+                            dto.setPosition(emp.getPosition());
+                            if (emp.getDepartment() != null) {
+                                dto.setDepartmentName(emp.getDepartment().getName());
+                            }
+                        });
+                    }
+                    return dto;
+                }).collect(Collectors.toList());
+    }
+
     public List<Message> searchMessages(Long roomId, String keyword) {
         return messageRepo.searchMessages(roomId, keyword);
     }
 
     // ── PRIVATE HELPERS ──────────────────────────────────────────
 
-    // [Chat] Thêm thành viên với role cụ thể
+    // Thêm thành viên vào phòng với role chỉ định, bỏ qua nếu đã có
     private void addMemberWithRole(Long roomId, Long userId, String role) {
         if (!memberRepo.existsByRoomIdAndUserId(roomId, userId)) {
             ChatRoomMember member = new ChatRoomMember();
@@ -284,14 +337,45 @@ public class ChatService {
         }
     }
 
-    // [Chat] Gửi tin nhắn hệ thống vào phòng (dùng sender = creator của room hoặc
-    // bất kỳ admin)
+    // Cập nhật role nếu đã trong phòng, thêm mới nếu chưa có
+    private void setMemberRole(Long roomId, Long userId, String role) {
+        memberRepo.findByRoomIdAndUserId(roomId, userId).ifPresentOrElse(
+                member -> {
+                    member.setRole(role);
+                    memberRepo.save(member);
+                },
+                () -> addMemberWithRole(roomId, userId, role));
+    }
+
+    // Lấy họ tên thật từ Employee, fallback về username nếu không có
+    private String getDisplayName(User user) {
+        Long empId = user.getEmployeeId();
+        if (empId != null) {
+            return employeeRepo.findById(empId)
+                    .map(emp -> emp.getFullName())
+                    .orElse(user.getUsername());
+        }
+        return user.getUsername();
+    }
+
+    // Dùng cho Controller khi cần resolve tên theo userId
+    public String resolveDisplayName(Long userId) {
+        return userRepo.findById(userId).map(this::getDisplayName).orElse("Unknown");
+    }
+
+    private MessageDTO enrichMessageDTO(MessageDTO dto, Message m) {
+        if (m.getSender() != null) {
+            dto.setSenderName(getDisplayName(m.getSender()));
+        }
+        return dto;
+    }
+
+    // Gửi tin nhắn hệ thống vào phòng (dùng creator của room làm sender)
     private void sendSystemMessage(Long roomId, String content) {
         ChatRoom room = roomRepo.findById(roomId).orElse(null);
         if (room == null)
             return;
 
-        // [Chat] Lấy creator làm sender ảo cho tin nhắn hệ thống
         User systemUser = room.getCreatedBy();
         if (systemUser == null)
             return;
@@ -303,19 +387,18 @@ public class ChatService {
         sys.setMessageType(MessageType.SYSTEM);
         Message saved = messageRepo.save(sys);
 
-        broadcastEvent(roomId, ChatEventType.NEW_MESSAGE, MessageDTO.from(saved), null, systemUser.getId());
+        broadcastEvent(roomId, ChatEventType.NEW_MESSAGE, enrichMessageDTO(MessageDTO.from(saved), saved), null,
+                systemUser.getId());
     }
 
-    // [Chat] Thêm thành viên vào phòng chat
     public void addMember(Long roomId, Long userId) {
         addMemberWithRole(roomId, userId, "MEMBER");
     }
 
     // ══════════════════════════════════════════════════════════════
-    // [Chat] GỬI TIN NHẮN - Core messaging qua WebSocket
+    // TIN NHẮN
     // ══════════════════════════════════════════════════════════════
 
-    // [Chat] Gửi tin nhắn nâng cao - Hỗ trợ reply, metadata, file
     @Transactional
     public Message sendMessageAdvanced(Long roomId, Long senderId, String content,
             MessageType type, Long replyToId,
@@ -341,33 +424,40 @@ public class ChatService {
         msg.setFileSize(fileSize);
         Message saved = messageRepo.save(msg);
 
-        // [Chat] Tạo DTO kèm thông tin reply nếu có
-        MessageDTO dto = MessageDTO.from(saved);
+        // Cập nhật lastReadMessageId của người gửi để không tự count tin mình gửi là "chưa đọc"
+        memberRepo.findByRoomIdAndUserId(roomId, senderId).ifPresent(member -> {
+            member.setLastReadMessageId(saved.getId());
+            memberRepo.save(member);
+        });
+
+        MessageDTO dto = enrichMessageDTO(MessageDTO.from(saved), saved);
         if (replyToId != null) {
-            messageRepo.findById(replyToId).ifPresent(reply -> dto.setReplyToMessage(MessageDTO.from(reply)));
+            messageRepo.findById(replyToId)
+                    .ifPresent(reply -> dto.setReplyToMessage(enrichMessageDTO(MessageDTO.from(reply), reply)));
         }
 
-        // [Chat] Broadcast qua WebSocket
         broadcastEvent(roomId, ChatEventType.NEW_MESSAGE, dto, null, senderId);
         return saved;
     }
 
-    // [Chat] Lấy tin nhắn trong phòng
     public List<Message> getMessages(Long roomId) {
         return messageRepo.findByRoomIdOrderByCreatedAtAsc(roomId);
     }
 
+    public Optional<Message> findMessageById(Long messageId) {
+        return messageRepo.findById(messageId);
+    }
+
     // ══════════════════════════════════════════════════════════════
-    // [Chat] THU HỒI - Xóa tin nhắn gửi nhầm ở cả 2 phía
+    // THU HỒI TIN NHẮN
     // ══════════════════════════════════════════════════════════════
 
-    // [Chat] Thu hồi tin nhắn - Chỉ người gửi mới được thu hồi
+    // Chỉ người gửi mới có quyền thu hồi tin nhắn của mình
     @Transactional
     public Message recallMessage(Long senderId, Long messageId) {
         Message msg = messageRepo.findById(messageId)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy tin nhắn"));
 
-        // [Chat] Kiểm tra quyền: chỉ người gửi mới được thu hồi
         if (!msg.getSender().getId().equals(senderId)) {
             throw new ForbiddenException("Chỉ người gửi mới có thể thu hồi tin nhắn");
         }
@@ -376,91 +466,16 @@ public class ChatService {
         msg.setMessage("Tin nhắn đã bị thu hồi");
         Message saved = messageRepo.save(msg);
 
-        // [Chat] Broadcast event thu hồi để client cập nhật UI
-        broadcastEvent(msg.getRoom().getId(), ChatEventType.RECALL, MessageDTO.from(saved), null, senderId);
+        broadcastEvent(msg.getRoom().getId(), ChatEventType.RECALL, enrichMessageDTO(MessageDTO.from(saved), saved),
+                null, senderId);
         return saved;
     }
 
     // ══════════════════════════════════════════════════════════════
-    // [Chat] REACTION - Thả cảm xúc lên tin nhắn
+    // ĐÃ XEM (SEEN)
     // ══════════════════════════════════════════════════════════════
 
-    // [Chat] Thêm/Toggle reaction trên tin nhắn
-    @Transactional
-    public void toggleReaction(Long userId, Long messageId, String emoji) {
-        Message msg = messageRepo.findById(messageId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy tin nhắn"));
-        User user = userRepo.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy người dùng"));
-
-        // [Chat] Toggle: nếu đã react emoji này thì xóa, chưa thì thêm
-        Optional<MessageReaction> existing = reactionRepo.findByMessageIdAndUserIdAndEmoji(messageId, userId, emoji);
-        if (existing.isPresent()) {
-            reactionRepo.delete(existing.get());
-        } else {
-            MessageReaction reaction = new MessageReaction();
-            reaction.setMessage(msg);
-            reaction.setUser(user);
-            reaction.setEmoji(emoji);
-            reactionRepo.save(reaction);
-        }
-
-        // [Chat] Broadcast cập nhật reactions
-        List<ReactionDTO> reactions = getReactionsForMessage(messageId);
-        broadcastEvent(msg.getRoom().getId(), ChatEventType.REACTION, MessageDTO.from(msg), reactions, userId);
-    }
-
-    // [Chat] Lấy reactions tổng hợp theo emoji cho 1 tin nhắn
-    public List<ReactionDTO> getReactionsForMessage(Long messageId) {
-        List<MessageReaction> allReactions = reactionRepo.findByMessageId(messageId);
-
-        // [Chat] Nhóm reactions theo emoji → tạo ReactionDTO
-        Map<String, List<MessageReaction>> grouped = allReactions.stream()
-                .collect(Collectors.groupingBy(MessageReaction::getEmoji));
-
-        return grouped.entrySet().stream().map(entry -> {
-            List<Long> userIds = entry.getValue().stream().map(r -> r.getUser().getId()).toList();
-            List<String> userNames = entry.getValue().stream().map(r -> r.getUser().getUsername()).toList();
-            return new ReactionDTO(entry.getKey(), entry.getValue().size(), userIds, userNames);
-        }).toList();
-    }
-
-    // ══════════════════════════════════════════════════════════════
-    // [Chat] ĐÃ XEM (SEEN) - Hiển thị danh sách người đã xem
-    // ══════════════════════════════════════════════════════════════
-
-    // [Chat] Đánh dấu đã xem tin nhắn
-    @Transactional
-    public void markAsSeen(Long userId, Long messageId) {
-        if (readReceiptRepo.existsByMessageIdAndUserId(messageId, userId)) {
-            return; // Đã xem rồi, không cần cập nhật
-        }
-
-        Message msg = messageRepo.findById(messageId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy tin nhắn"));
-        User user = userRepo.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy người dùng"));
-
-        MessageReadReceipt receipt = new MessageReadReceipt();
-        receipt.setMessage(msg);
-        receipt.setUser(user);
-        receipt.setSeenAt(LocalDateTime.now());
-        readReceiptRepo.save(receipt);
-
-        // [Chat] Cập nhật lastReadMessageId trong ChatRoomMember
-        memberRepo.findByRoomIdAndUserId(msg.getRoom().getId(), userId)
-                .ifPresent(member -> {
-                    member.setLastReadMessageId(messageId);
-                    memberRepo.save(member);
-                });
-
-        // [Chat] Broadcast danh sách người đã xem
-        List<ReadReceiptDTO> seenList = readReceiptRepo.findByMessageId(messageId).stream()
-                .map(ReadReceiptDTO::from).toList();
-        broadcastEvent(msg.getRoom().getId(), ChatEventType.SEEN, null, seenList, userId);
-    }
-
-    // [Chat] Đánh dấu đã xem tất cả tin nhắn đến lastSeenMessageId
+    // Cập nhật lastReadMessageId khi user đọc đến tin cuối cùng trong phòng
     @Transactional
     public void markRoomAsSeen(Long userId, Long roomId, Long lastSeenMessageId) {
         memberRepo.findByRoomIdAndUserId(roomId, userId)
@@ -468,35 +483,70 @@ public class ChatService {
                     member.setLastReadMessageId(lastSeenMessageId);
                     memberRepo.save(member);
                 });
-
-        // [Chat] Tạo read receipt cho tin nhắn cuối cùng
-        markAsSeen(userId, lastSeenMessageId);
     }
 
     // ══════════════════════════════════════════════════════════════
-    // [Chat] DANH BẠ THÔNG MINH - Tra cứu đồng nghiệp
+    // DANH BẠ
     // ══════════════════════════════════════════════════════════════
 
-    // [Chat] Tìm kiếm đồng nghiệp theo keyword, kỹ năng, chức vụ, trạng thái
-    public List<ContactDTO> searchContacts(String keyword, String skill, String position, String status) {
-        List<Employee> employees = employeeRepo.findAll();
+    // Tìm kiếm đồng nghiệp theo tên, kỹ năng, chức vụ hoặc trạng thái
+    // roomId (optional): nếu truyền vào thì lọc bỏ thành viên đã có trong phòng
+    // - Nếu là phòng DEPARTMENT: chỉ trả về nhân viên trong phòng ban đó
+    // - Nếu là phòng GROUP/PRIVATE: trả về toàn bộ (trừ người đã trong phòng)
+    public List<ContactDTO> searchContacts(Long currentUserId, String keyword, String skill, String position,
+            String status, Long roomId) {
+        Long currentEmployeeId = userRepo.findById(currentUserId)
+                .map(User::getEmployeeId).orElse(null);
+
+        // Lấy danh sách userId đang trong phòng để loại trừ
+        Set<Long> existingMemberUserIds = (roomId != null)
+                ? memberRepo.findByRoomId(roomId).stream()
+                        .map(m -> m.getUser().getId())
+                        .collect(Collectors.toSet())
+                : Collections.emptySet();
+
+        // Nếu là phòng DEPARTMENT → chỉ lấy nhân viên trong phòng ban đó
+        List<Employee> employees;
+        if (roomId != null) {
+            ChatRoom room = roomRepo.findById(roomId).orElse(null);
+            if (room != null && room.getType() == ChatRoomType.DEPARTMENT && room.getDepartment() != null) {
+                employees = employeeRepo.findByDepartmentIdAndStatus(
+                        room.getDepartment().getId(), EmployeeStatus.ACTIVE);
+            } else {
+                employees = employeeRepo.findAll();
+            }
+        } else {
+            employees = employeeRepo.findAll();
+        }
 
         return employees.stream()
-                // [Chat] Lọc theo keyword (tên, email)
+                .filter(emp -> !emp.getId().equals(currentEmployeeId))
+                // Bỏ admin hệ thống khỏi danh bạ chat
+                .filter(emp -> userRepo.findByEmployeeId(emp.getId())
+                        .map(u -> u.getRole() != Role.ADMIN)
+                        .orElse(true))
+                // Bỏ những người đang là thành viên hiện tại của phòng
+                .filter(emp -> {
+                    if (existingMemberUserIds.isEmpty())
+                        return true;
+                    return userRepo.findByEmployeeId(emp.getId())
+                            .map(u -> !existingMemberUserIds.contains(u.getId()))
+                            .orElse(true);
+                })
+                // Lọc theo keyword (tên, email)
                 .filter(emp -> keyword == null || keyword.isEmpty()
                         || emp.getFullName().toLowerCase().contains(keyword.toLowerCase())
                         || emp.getEmail().toLowerCase().contains(keyword.toLowerCase()))
-                // [Chat] Lọc theo kỹ năng
                 .filter(emp -> skill == null || skill.isEmpty()
                         || (emp.getSkills() != null && emp.getSkills().toLowerCase().contains(skill.toLowerCase())))
-                // [Chat] Lọc theo chức vụ
                 .filter(emp -> position == null || position.isEmpty()
                         || emp.getPosition().toLowerCase().contains(position.toLowerCase()))
-                // [Chat] Lọc theo trạng thái nhân viên
                 .filter(emp -> status == null || status.isEmpty()
                         || emp.getStatus().name().equalsIgnoreCase(status))
+                .sorted(Comparator.comparing(
+                        emp -> emp.getDepartment() != null ? emp.getDepartment().getName() : "",
+                        Comparator.nullsLast(Comparator.naturalOrder())))
                 .map(emp -> {
-                    // [Chat] Tìm userId tương ứng với employee
                     Long userId = userRepo.findByEmployeeId(emp.getId())
                             .map(User::getId).orElse(null);
                     String userStatus = emp.getStatus().name();
@@ -505,7 +555,7 @@ public class ChatService {
                 .toList();
     }
 
-    // [Chat] Gửi event qua WebSocket tới tất cả thành viên trong phòng
+    // Broadcast event qua WebSocket đến tất cả thành viên trong phòng
     private void broadcastEvent(Long roomId, ChatEventType eventType,
             MessageDTO message, Object data, Long triggeredBy) {
         ChatEventDTO event = ChatEventDTO.of(eventType.name(), roomId, message, data, triggeredBy);
